src/styles/pages/blog.css
/* *** General *** */
a {
  text-decoration: none;
}

ul {
  display: flex;
  flex-direction: column;

  padding: 0;

  list-style: none;
}

li {
  display: flex;

  padding: 0;
}

/* *** Blog Topics Navigation *** */

.blog-topics-nav {
  /* position: sticky;
  top: 3.5rem; */

  grid-column: span 2;
  margin-bottom: 4rem;

  z-index: 10;
}

.blog-topics-list {
  display: flex;
  flex-direction: row;
  gap: 2rem;

  background-color: var(--clr-base);

  padding: 1rem;

  /* border: 1px solid var(--clr-surface-0); */
  border-radius: var(--radius-base);
}

/* *** Blog Side Navigation *** */

.blog-nav-wrapper {
  position: relative;
}

.blog-nav-list-title {
  display: flex;
  align-items: center;
  justify-content: start;

  gap: 0.6rem;

  font-weight: 500;

  background-color: var(--clr-mantle);

  width: 100%;
  padding: 1rem;
}

.blog-nav-sublist-wrapper {
  display: flex;
  flex-direction: column;
  align-items: start;

  background-color: var(--clr-base);
  width: 100%;

  border-radius: var(--radius-surface);
  /* outline: 1px solid var(--clr-surface-0); */
}

.blog-nav-sublist {
  padding-inline: 1rem;
  padding-block: 1rem;

  font-size: 1rem;
}

.blog-nav-list {
  display: flex;
  gap: 1rem;
}

/*** Side Nav - Categories ***/

.category-list {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 0.5rem 0.5rem;
}

/*** Side Nav - Tags ***/

.tags-list {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 0.45rem 0.4rem;
}

/* *** Blog Post Cards *** */

.blog-post-cards-wrapper {
  width: 100%;
}

.blog-post-cards-list {
  display: flex;
  gap: 4rem;

  width: 100%;
}

/* *** Utility *** */

.wrapper {
  margin-top: 14rem;

  padding-inline: 1rem;

  width: 100%;
}

.blog-nav-wrapper[data-appbar-revealed='false'],
.blog-nav-wrapper[data-appbar-revealed='true'] {
  top: 0;
}

@media screen and (min-width: 768px) {
  .page-title {
    grid-column: span 2;
  }

  /* *** Blog Post Cards *** */

  .blog-post-cards-list {
    padding-right: 1rem;
  }

  .blog-nav-list {
    flex-direction: column;
    align-items: start;

    font-size: 1.2rem;

    margin-left: auto;

    max-width: 18rem;
  }

  .blog-nav-wrapper {
    position: sticky;

    transition: top 0.4s ease-in-out;
  }

  .blog-nav-wrapper[data-appbar-revealed='true'] {
    top: 4rem;
  }

  .blog-nav-wrapper[data-appbar-revealed='false'] {
    top: 0;
  }

  /* *** Utility *** */

  .wrapper {
    display: grid;
    grid-template-columns: 1fr auto;
    align-items: start;
    margin-top: 20rem;
  }
}

